CICO-23064, fixes some admin layout issues on iPad, depending on screen size

--- a/zest_station/css/less/layout.less
+++ b/zest_station/css/less/layout.less
@@ -182,6 +182,7 @@
                 margin: auto;
                 margin-top:10px;
             }
+              
         }
         .inline{
             display: inline;
@@ -910,7 +911,10 @@
             #popup-content {
                 opacity: 1;
                 overflow: hidden;
-               // display: block;
+                &.workstation_list{
+                    display: block;
+                }
+                
           //      .scale3d(1, 1, 1);
             }
         }
@@ -947,4 +951,9 @@
         
         .ngdialog-content{//fixes an issue with the default angular theme overwriting the popup layout
             padding: 0em !important;
+        }
+        .v-middle{
+            >td{
+                vertical-align:middle !important;
+            }
         }
